--- a/article_aggregator/static/css/main.css
+++ b/article_aggregator/static/css/main.css
@@ -1,12 +1,19 @@
 body{
   height: 100%;
-  background: #777;
+  /* background: #777; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* margin: 0; */
+  background-color: #f7f8fc;
+  font-family: "Roboto", sans-serif;
+  color: #10182f;
 }
 P{
-  color: white;
+  color: black;
 }
 h1, h2, h3, h4, h5, h6{
-  color: white;
+  color: black;
 }
 
 .container{
@@ -15,6 +22,8 @@ h1, h2, h3, h4, h5, h6{
   margin-left: 15% auto;
   margin-right: 15% auto;
   padding: 0px 15px;  
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container:after, .row:after {
@@ -58,7 +67,8 @@ header a:hover{
   color: #000;
   text-decoration: none;
 }
-nav{
+
+nav.user{
   float: right;
 }
 
@@ -275,3 +285,76 @@ hr{
   outline: none;
   text-decoration: none;
 }
+
+.card {
+  margin: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 300px;
+}
+
+.card a:link { text-decoration: none; }
+.card a:visited { text-decoration: none; }
+.card a:hover { text-decoration: none; }
+.card a:active { text-decoration: none; }
+
+.card-header img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  min-height: 250px;
+}
+
+.tag {
+  background: #cccccc;
+  border-radius: 50px;
+  font-size: 12px;
+  margin: 0;
+  color: #fff;
+  padding: 2px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.tag-teal {
+  background-color: #47bcd4;
+}
+.tag-purple {
+  background-color: #5e76bf;
+}
+.tag-pink {
+  background-color: #cd5b9f;
+}
+
+.card-body p {
+  font-size: 13px;
+  margin: 0 0 40px;
+}
+.user {
+  display: flex;
+  margin-top: auto;
+}
+
+.user img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.user-info h5{
+  margin: 0;
+}
+.user-info h6 {
+  margin: 0;
+}
+.user-info small {
+  color: #545d7a;
+}   
