--- a/aggregator/templates/base.html
+++ b/aggregator/templates/base.html
@@ -67,22 +67,16 @@
 					<ul class="navbar-nav">
 					  	<li class="nav-item"><a href="{% url 'home' %}">Главная</a></li>
 					  	<li class="nav-item"><a href="{% url 'article_list' %}">Все статьи</a></li>
-						  <li class="nav-item has-dropdown">
+						  <li class="nav-item has-dropdown do-dropdown">
 
-							<a href="#">Theme</a>
+							<a href="#">Категории</a>
 				  
 							<ul class="dropdown">
-				  
-							  <li class="dropdown-item">
-								<a href="#">light</a>
-							  </li>
-							  <li class="dropdown-item">
-								<a href="#">dark</a>
-							  </li>
-							  <li class="dropdown-item">
-								<a href="#">solarize</a>
-							  </li>
-				  
+								{% for category in categories %}
+									<li class="dropdown-item">
+										<a href="{% url 'article_list_by_category' category.id %}">{{category.name}}</a>
+								  	</li>
+								{% endfor %}
 							</ul>
 						  </li>
 					  	<li class="nav-item">
