--- a/aggregator/templates/users/login.html
+++ b/aggregator/templates/users/login.html
@@ -2,12 +2,48 @@
 
 {% block content %}      
 
-<h1>Login</h1>
-<form method="POST">
-  {% csrf_token %}
-  {{ login_form }}
-  <button class="btn btn-primary" type="submit">Login</button>
-</form>
-<p class="text-center">Don't have an account? <a href={% url 'register' %}>Create an account</a>.</p>
+{% comment %} <h1>Login</h1> {% endcomment %}
+{% comment %} <form method="POST"> {% endcomment %}
+  {% comment %} {% csrf_token %} {% endcomment %}
+  {% comment %} {{ login_form }} {% endcomment %}
+  {% comment %} <button class="btn btn-primary" type="submit">Login</button> {% endcomment %}
+{% comment %} </form> {% endcomment %}
+{% comment %} <p class="text-center">Don't have an account? <a href={% url 'register' %}>Create an account</a>.</p> {% endcomment %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 
+<div class="form-bg">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
+              <div class="form-container">
+                  <h3 class="title">Вход</h3>
+                  <form class="form-horizontal" method="POST">
+                      {% csrf_token %}
+                      {% if login_form.non_field_errors %}
+                        <ul class='form-errors'>
+                          {% for error in login_form.non_field_errors %}
+                            <li>{{ error }}</li>
+                          {% endfor %}
+                        </ul>
+                      {% endif %}
+                      <div class="form-group">
+                        <input class="form-control" id="{{ login_form.username.id_for_label }}" name="{{ login_form.username.html_name }}" placeholder="{{ login_form.username.html_name|capfirst }}" type="text" />
+                      </div>
+
+                      <div class="form-group">
+                        <input class="form-control" id="{{ login_form.password.id_for_label }}" name="{{ login_form.password.html_name }}" placeholder="{{ login_form.username.password|capfirst }}" type="password" />
+                      </div>
+
+                      <div class="form-group">
+                        <span class="check-label">У вас нет аккаунта? <a href={% url 'register' %}>Создать аккаунт</a>.</span>
+                      </div>
+                      
+                      <button class="btn" type="submit">Войти</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock %}
