--- a/aggregator/templates/users/register.html
+++ b/aggregator/templates/users/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}        
 
-<h1>Register</h1>
+{% comment %} <h1>Register</h1>
 <form method="POST">
 	{% csrf_token %}
 	{{ register_form.non_field_errors }}
@@ -15,5 +15,52 @@
     {% endfor %}              
 	<button class="btn btn-primary" type="submit">Register</button>
 </form>
-<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p> {% endcomment %}
+
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+
+<div class="form-bg">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
+              <div class="form-container">
+                  <h3 class="title">Регистрация</h3>
+                  <form class="form-horizontal" method="POST">
+                      {% csrf_token %}
+                      {% if register_form.non_field_errors %}
+                        <ul class='form-errors'>
+                          {% for error in register_form.non_field_errors %}
+                            <li>{{ error }}</li>
+                          {% endfor %}
+                        </ul>
+                      {% endif %}
+                      <div class="form-group">
+                        <input class="form-control" id="{{ register_form.username.id_for_label }}" name="{{ register_form.username.html_name }}" placeholder="{{ register_form.username.html_name|capfirst }}" type="text" />
+                      </div>
+
+                      <div class="form-group">
+                        <input class="form-control" id="{{ register_form.email.id_for_label }}" name="{{ register_form.email.html_name }}" placeholder="{{ register_form.email.html_name|capfirst }}" type="email" />
+                      </div>
+
+                      <div class="form-group">
+                        <input class="form-control" id="{{ register_form.password1.id_for_label }}" name="{{ register_form.password1.html_name }}" placeholder="Password" type="password" />
+                      </div>
+
+                      <div class="form-group">
+                        <input class="form-control" id="{{ register_form.password2.id_for_label }}" name="{{ register_form.password2.html_name }}" placeholder="Repeat password" type="password" />
+                      </div>
+
+                      <div class="form-group">
+                        <span class="check-label">У вас есть аккаунт? <a href={% url 'login' %}>Войти</a>.</span>
+                      </div>
+                      
+                      <button class="btn" type="submit">Зарегистрироваться</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
 {% endblock %}
