--- a/article_aggregator/static/css/main.css
+++ b/article_aggregator/static/css/main.css
@@ -8,7 +8,12 @@ body{
   background-color: #f7f8fc;
   font-family: "Roboto", sans-serif;
   color: #10182f;
+}  
+
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
+
 P{
   color: black;
 }
@@ -190,18 +195,32 @@ nav li {
 .dropdown {
   opacity: 0;
   position: absolute;
-  width: 500px;
   z-index: 2;
-  
+  /* width: 1000px; */
   display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+
   align-items: center;
-  justify-content: space-around;
-  height: 3rem;
+  
   margin-top: 2rem;
-  padding: 0.5rem;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 1.5rem;
  
   transform: translateX(-40%);
-  transition: opacity .15s ease-out;
+  /* transition: opacity .15s ease-out; */
+  /* transition: all 1s ease-in; */
+  /* transition: opacity 2s linear; */
+  transition: visibility 0s .5s, opacity .5s linear;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0px -17px 30px 10px rgba(34, 60, 80, 0.3);
+  pointer-events: none;
+}
+
+.dropdown-item {
+  width: 200px;
 }
 
 .dropdown-item a {
