--- a/aggregator/templates/base.html
+++ b/aggregator/templates/base.html
@@ -56,6 +56,7 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
   	<script src="https://kit.fontawesome.com/dbc30a1147.js"></script>
+	<script type="text/javascript" src="{% static 'js/htmx.min.js' %}" defer></script>
   	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
 </head>
@@ -83,13 +84,26 @@
 							<nav class="user">
 								<ul>
 									{% if user.is_authenticated %}
-									<li><a href="#">Welcome, {{user.username}}</a></li>
+									<li><a href="{% url 'user_profile' %}">{{user.username}}</a></li>
 									<li><a href="{% url 'logout'%}?next={{request.path}}">Выйти</a></li>
 									{% else %}
 									<li><a href="{% url 'login'%}?next={{request.path}}">Войти</a></li>
 									{% endif %} 
 								</ul>
 					  		</nav>
+						</li>
+						<li>
+							<input name="q"
+							placeholder="Search for a title"
+							hx-get="{% url 'partial_search' %}"
+							hx-target="#results"
+							hx-trigger="input delay:0.2s"
+					 		>
+							<section id="results">
+								<div class="results">
+									{% include 'articles/partial_results.html' %}
+								</div>
+							</section>
 						</li>
 					</ul>
 				  </nav>
