--- a/aggregator/templates/users/login.html
+++ b/aggregator/templates/users/login.html
@@ -28,11 +28,19 @@
                         </ul>
                       {% endif %}
                       <div class="form-group">
-                        <input class="form-control" id="{{ login_form.username.id_for_label }}" name="{{ login_form.username.html_name }}" placeholder="{{ login_form.username.html_name|capfirst }}" type="text" />
+                        <input class="form-control" id="{{ login_form.username.id_for_label }}" name="{{ login_form.username.html_name }}" placeholder="{{ login_form.username.html_name|capfirst }}"  type="text" 
+                          {% if username %}
+                          value="{{username}}"
+                          {% endif %}
+                        />
                       </div>
 
                       <div class="form-group">
-                        <input class="form-control" id="{{ login_form.password.id_for_label }}" name="{{ login_form.password.html_name }}" placeholder="{{ login_form.username.password|capfirst }}" type="password" />
+                        <input class="form-control" id="{{ login_form.password.id_for_label }}" name="{{ login_form.password.html_name }}" placeholder="{{ login_form.username.password|capfirst }}" type="password" 
+                          {% if password %}
+                            value="{{password}}"
+                          {% endif %}
+                        />
                       </div>
 
                       <div class="form-group">
