--- a/aggregator/templates/users/profile.html
+++ b/aggregator/templates/users/profile.html
@@ -2,7 +2,27 @@
 {% load static %}
 {% block content%} 
 
-{{current_user.username}}
-{{current_user.email}}
+<h3>{{current_user.username}}</h3>
+<small>{{current_user.email}}</small>
+
+
+<div class="profile-list-header">Просмотренные</div>
+<ul class="profile-list">
+    {% for article in articles_viewed_by_user%}
+        <li class="profile-list-item" id="profile-list-item">
+            <a href="{% url 'article_view' article.article.id%}" class="profile-list-item-content">{{article.article.title}}</a>
+        </li>
+    {% endfor %}
+</ul>
+
+
+<div class="profile-list-header">Комментарии</div>  
+<ul class="profile-list">
+    {% for comment in user_comments%}
+        <li class="profile-list-item" id="profile-list-item">
+            <p><a href="{% url 'article_view' comment.article.id%}">{{comment.article.title}}</a>, {{comment.content}}, {{comment.date}}</p>
+        </li>
+    {% endfor %}
+</ul>
 
 {% endblock content%}
