--- a/article_aggregator/static/css/main.css
+++ b/article_aggregator/static/css/main.css
@@ -37,6 +37,22 @@ h1, h2, h3, h4, h5, h6{
   clear: both;
 }
 
+.content{
+  width: 100%;
+  max-width: 1024px;
+  margin-left: 15% auto;
+  margin-right: 15% auto;
+  padding: 0px 15px; 
+}
+
+.content img{
+  width: 100%;
+  max-width: 1024px;
+  margin-left: 15% auto;
+  margin-right: 15% auto;
+  padding: 0px 15px; 
+}
+
 #wrap{
   min-height: 100%;
 }
@@ -135,46 +151,6 @@ nav li {
   outline: none;
 }
 
-/* .sidebar {
-  margin: 0;
-  margin-top: 10px;
-  padding: 0;
-  width: 130px;
-  position: fixed;
-  overflow: auto;
-}
-
-.sidebar a {
-  display: block;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-}
-
-.sidebar a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-
-@media screen and (max-width: 1280px) {
-  .sidebar {
-    width: 100%;
-    max-width: 1024px;
-    margin: 0px auto;
-    padding: 0px 15px;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-}
-
-.sidebar-nav {
-  margin-top: 20px;
-  padding: 0;
-  list-style: none;
-} */
-
-
 .navbar-custom {
   height: 70px;
   width: 100%;
@@ -196,7 +172,6 @@ nav li {
   opacity: 0;
   position: absolute;
   z-index: 2;
-  /* width: 1000px; */
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -422,4 +397,120 @@ hr{
 }
 .user-info small {
   color: #545d7a;
-}   
+}
+
+.form-input{
+  height: 50%;
+  text-indent: 33px;
+  border-radius: 10px;
+  transition: border-radius ease-in-out .15s, border-bottom ease-in-out .15s;
+}
+
+.form-input.search-field:focus{
+  border-radius: 10px 10px 0 0;
+  border-bottom: none;
+}
+
+.form{
+  width: 400px;
+  position: relative;
+}
+
+.form .fa-search{
+  position: absolute;
+  top: 31.5%;
+  left: 5%;
+  color: #9ca3af;
+
+}
+
+.form span{
+  position: absolute;
+  right: 17px;
+  top: 13px;
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+}
+
+.results{
+  overflow: auto;
+  position: absolute;
+  background: #fff;
+  width: 400px;
+  max-height: 400px;
+  opacity: 0;
+  border-radius: 0% 0% 20px 20px;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s, opacity ease-in-out .15s;
+  border: 1px solid #ccc;
+  padding: 0;
+}
+
+.results::-webkit-scrollbar {
+  background: transparent;
+}
+
+.dropdown-results{
+  max-height: 390px;
+}
+
+.form-input.search-field:focus ~ .results{
+  border-color: #66afe9;
+  border-top: none;
+  opacity: 1;
+}
+
+.result-item{
+  width: 400px;
+  border-top: 1px solid #ccc;
+}
+
+#load-more  {
+  width: 100%;
+  background-color: #ccc;
+  border: 1px solid #ccc;
+}
+
+a.load-more{
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+.profile-list-header{
+  margin-top: 20px;
+  background-color: #ccc;
+  width: 100%;
+  font-size: 25px;
+  font-weight: 700;
+  text-transform: capitalize;
+  border: 1px solid #66afe9;
+  text-align: center;
+}
+
+.profile-list{
+  list-style-type: none;
+  width: 100%;
+  padding: 0;
+  max-height: 500px;
+  overflow: auto;
+}
+
+.profile-list::-webkit-scrollbar {
+  display: none;
+}
+
+.profile-list-item{
+  width: 100%;
+  border: 1px solid #ccc;
+  background-color: white;
+  line-height: 38px;
+}
+
+a.profile-list-item-content{
+  padding-left: 10px;
+  padding-right: 10px;
+  display: block;
+  width: 100%;  
+  text-decoration: none;
+}
