added styles for comments, set correct margins in search field and set correct css styles when button displays without any bugs

--- a/aggregator/templates/articles/view.html
+++ b/aggregator/templates/articles/view.html
@@ -11,7 +11,11 @@
 	<p align="center"><em>{{object.author}}, {{object.date}}, прочитано:{{no_of_seen}}</em></p><br>
 	{% comment %} <p align="justify">{{article.content|linebreaksbr}}</p> {% endcomment %}
    <div class="content" align="justify" >{{object.content|safe}}</div>
-    <hr>
+   {% include "articles/comments.html" %}
+   <hr>
+   <h2> Comments </h2>
+
+    {% comment %} <hr>
    
    <h2> Comments </h2>
 
@@ -64,7 +68,7 @@
             </div>
          {% endfor %}
       {% endfor %}
-   </div>
+   </div> {% endcomment %}
 {% endblock %}
 
 {% block scripts %}
