--- a/aggregator/templates/articles/comments.html
+++ b/aggregator/templates/articles/comments.html
@@ -1,12 +1,13 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/comments.css' %}">
 
-<div class="comment-thread">
+<div class="comment-thread">    
     {% for comment in comments %}
 
     <!-- Comment 1 start -->
+    {% if comment.is_parent %}
     <details open class="comment" id="comment-{{comment.id}}">
-        {% if comment.is_parent %}
+        
         <a href="#comment-{{comment.id}}" class="comment-border-link">
             <span class="sr-only">Jump to comment-{{comment.id}}</span>
         </a>
@@ -25,7 +26,7 @@
                 <div class="comment-info">
                     <a href="#" class="comment-author">{{comment.user.name}}</a>
                     <p class="m-0">
-                        {{comment.calculate_rating}} points &bull; {{comment.date}}
+                         {{comment.calculate_rating}} points &bull; {{comment.date}}
                     </p>
                 </div>
             </div>
@@ -34,16 +35,20 @@
         <div class="comment-body">
             <p>{{comment.content}}</p>
             <button type="button" data-toggle="reply-form" data-target="{{comment.id}}-reply-form">Ответить</button>
-
+            {% if user.is_authenticated %}
             <!-- Reply form start -->
             <form method="POST" class="reply-form d-none" id="{{comment.id}}-reply-form">
-                <textarea placeholder="Ответить на комментарий" rows="4"></textarea>
+                {% csrf_token %} 
+                <textarea placeholder="Ответить на комментарий" rows="4" name="content" required id="id_content"></textarea>
+                <input type="hidden" value="{{ comment.pk }}" name="parent">
                 <button type="submit">Отправить</button>
                 <button type="button" data-toggle="reply-form" data-target="comment-{{comment.id}}-reply-form">Отмена</button>
             </form>
             <!-- Reply form end -->
+            {% else %} <h2>You need to Login to comment</h2> 
+            {% endif %}
+
         </div>
-        {% endif %}        
 
         {% if comment.is_parent %}
         <div class="replies">
@@ -71,20 +76,25 @@
                                 {{reply.calculate_rating}} points &bull; {{reply.date}}
                             </p>
                         </div>
-                    </div>
+                    </div>  
                 </summary>
         
                 <div class="comment-body">
                     <p>{{reply.content}}</p>
                     <button type="button" data-toggle="reply-form" data-target="{{reply.id}}-reply-form">Ответить</button>
-        
+                    {% if user.is_authenticated %}
                     <!-- Reply form start -->
                     <form method="POST" class="reply-form d-none" id="{{reply.id}}-reply-form">
-                        <textarea placeholder="Reply to comment" rows="4"></textarea>
+                        {% csrf_token %} 
+                        <textarea placeholder="Reply to comment" rows="4" name="content" required id="id_content"></textarea>
+                        <input type="hidden" value="{{ comment.pk }}" name="parent">
                         <button type="submit">Отправить</button>
                         <button type="button" data-toggle="reply-form" data-target="comment-{{reply.id}}-reply-form">Отмена</button>
                     </form>
                     <!-- Reply form end -->
+                    {% else %} <h2>You need to Login to comment</h2> 
+                    {% endif %}
+
                 </div>
             </details>
             <!-- Comment 2 end -->
@@ -94,6 +104,7 @@
         </div>
         {% endif %}
     </details>
+    {% endif %}
     <!-- Comment 1 end -->
 
     {% endfor %}
@@ -115,17 +126,14 @@
     );
 
 
-    var csrf_token = "{{csrf_token}}"
+    var csrf_token = "{{csrf_token}}";
     function set_rating_to_comment(element, element_id, value){
-        console.log(element_id, value)
-       parent = element.parentElement
- 
        var myHeaders = new Headers();
        myHeaders.append("Content-Type", "application/json");
-       myHeaders.append("X-CSRFToken", csrf_token)
+       myHeaders.append("X-CSRFToken", csrf_token);
  
        var raw = JSON.stringify({
-          "comment_id": parent.getAttribute('comment'),
+          "comment_id": element_id,
           "comment_rating": value
        });
  
@@ -139,21 +147,21 @@
        fetch("{% url 'set_comment_rating' %}", requestOptions)
          .then(response => response.text())
          .then(result => {
-             if (JSON.parse(JSON.parse(result)).status == 'OK'){
- 
- 
+             if (JSON.parse(JSON.parse(result)).status == 'OK' || JSON.parse(JSON.parse(result)).status == 'ALREADY_EXIST'){
                 var requestOptions = {
                    method: 'GET',
                    redirect: 'follow'
                  };
-                 comment_id = parent.getAttribute('comment')
+                 comment_id = element_id
                  fetch("{% url 'get_comment_rating' comment_id=1 %}".replace(/1/, comment_id.toString()), requestOptions)
                    .then(response => response.text())
                    .then(result => { 
-                      result = JSON.parse(JSON.parse(result))
-                      console.log(result)
+                      result = JSON.parse(JSON.parse(result));
                       if (result.status == 'OK'){
-                         parent.children[0].innerHTML= "&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;" + result.message
+                        comment_rating_node = element.parentNode.parentNode.querySelector(".m-0");
+                        let words = comment_rating_node.innerHTML.trim().split(" ");
+                        words[0] = result.message;
+                        comment_rating_node.innerHTML = words.join(' ');
                       }
                    })
                    .catch(error => console.log('error', error));
@@ -162,21 +170,21 @@
           })
          .catch(error => console.log('error', error));
     }
-    vote_btns = document.querySelectorAll(".comment-voting")
-    plus_rating = document.querySelectorAll(".rating-btn-plus")
-    minus_rating = document.querySelectorAll(".rating-btn-minus")
+    vote_btns = document.querySelectorAll(".comment-voting");
+    plus_rating = document.querySelectorAll(".rating-btn-plus");
+    minus_rating = document.querySelectorAll(".rating-btn-minus");
 
-    let plus_value = 1
-    let minus_value = -1
+    let plus_value = 1;
+    let minus_value = -1;
 
     for (i=0; i<vote_btns.length; i++){
-        let comment_id = vote_btns[i].id
+        let comment_id = vote_btns[i].id;
         vote_btns[i].childNodes[1].addEventListener("click", function() {
-           set_rating_to_comment(this, comment_id, plus_value)
-        })
+           set_rating_to_comment(this, comment_id, plus_value);
+        });
         vote_btns[i].childNodes[3].addEventListener("click",  function() {
-            set_rating_to_comment(this, comment_id, minus_value)
-         })
+            set_rating_to_comment(this, comment_id, minus_value);
+         });
      }
 
 </script>
